--- a/_posts/2023-06-05-깃허브 블로그 시작하기.md
+++ b/_posts/2023-06-05-깃허브 블로그 시작하기.md
@@ -1,10 +1,4 @@
 ---
 layout: post
-title: 깃허브 블로그 시작하기 
+title: 데이터 시스템의 관심사 신뢰성(Reliability)), 확장성(Scalability), 유지보수성(Maintainability)
 ---
-
-# 1. 깃허브 블로그 시작하기 
-
-안녕
-
-안녕
